this should fix optgroup on mobile, working on making hr lines on dark mode visible

--- a/css/picross.css
+++ b/css/picross.css
@@ -260,6 +260,11 @@ body.dark #galleryStudy:hover {
 	color: #86233b;
 }
 
+body.dark select hr {
+	background-color: #fff;
+	border: none;
+}
+
 #new {
 	font-weight: bold;
 	padding: 5px 10px;
